fix : repo text : hide overflow and static height

--- a/src/components/RepoResults/RepoResults.scss
+++ b/src/components/RepoResults/RepoResults.scss
@@ -29,7 +29,9 @@
   }
   &__description {
     margin-top: 1em;
-    font-size: .1em;
+    font-size: 1em;
+    overflow: hidden;
+    height: 120px;
   }
 }
 
